kubernetes/infrastructure/monitoring/grafana-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-host
  namespace: monitoring
spec:
  ports:
    - port: 3000
      protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: grafana-host
  namespace: monitoring
subsets:
  - addresses: 
      - ip: 207.231.105.130
    ports:
      - port: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
    - host: grafana.314vko
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana-host
                port:
                  number: 3000
